<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_exchange">ExchangeActivity</string>
    <string name="name_a">Angela</string>
    <string name="email_a">123456789@gmail.com</string>
    <string name="shezhi">设置</string>
    <string name="kefu">我的客服</string>
    <string name="about">关于</string>
    <string name="lingqian">换零钱</string>
    <string name="exit">退出登录</string>
    <string name="yes">Yes!</string>
    <string name="title_activity_touxiang">Yes!</string>
    <string name="name">姓名</string>
    <string name="touxiang">头像</string>
    <string name="nicheng">昵称</string>
    <string name="weishezhi">未设置</string>
    <string name="yonghuming">用户名</string>
    <string name="sex">性别</string>
    <string name="nv">女</string>
    <string name="txt_place">地区</string>
    <string name="shanghai">上海</string>
    <string name="txt_shiming">实名认证</string>
    <string name="bangding">绑定手机</string>
    <string name="txt_zhaopian">从照片中选一张</string>
    <string name="txt_camera">拍一张照片</string>
    <string name="title_activity_nicheng">NichengActivity</string>
    <string name="txt_nicheng">设置后，其他人将看到你的昵称</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="txt_dingwei">当前定位</string>
    <string name="sichuan">四川</string>
    <string name="all">全部</string>
    <string name="diqu">地区</string>
    <string name="title_activity_shiming">ShimingActivity</string>
    <string name="Id">身份证号</string>
    <string name="realname">真实姓名</string>
    <string name="idnumber">0123456789</string>
    <string name="shenhe">证件审核</string>
    <string name="txt_yitongguo">已通过</string>
    <string name="title_activity_shouji">ShoujiActivity</string>
    <string name="bangdingshouji">绑定手机</string>
    <string name="txt_genghuanshouji">更换绑定手机</string>
    <string name="title_activity_recode">RecodeActivity</string>
    <string name="txt_qsrmm">请输入原密码</string>
    <string name="txt_newcode">新密码</string>
    <string name="txt_qrnew">确认新密码</string>
    <string name="sure">确定</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="txt_jiance">检测更新</string>
    <string name="txt_yizuixin">已经最新</string>
    <string name="bbsm">版本说明</string>
    <string name="fk">反馈</string>
    <string name="qpf">去评分</string>
    <string name="title_activity_mine">MineActivity</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_quick_trade">QuickTradeActivity</string>
    
     <string name="app_name">YesLayout</string>
    <string name="action_settings">Settings</string>
    
    <string name="title_activity_ask">AskActivity</string>
    <string name="title_activity_ask_quick">AskQuickActivity</string>
    <string name="title_activity_ask_cusrom">AskCusromActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="spinnername">
        <item>美元</item>
        <item>港币</item>
        <item>欧元</item>
        <item>澳元</item>
        <item>人民币</item>
    </string-array>

    <string name="title_activity_fab_">FAB_Activity</string>

</resources>
